force-app/main/default/objects/Macro_Site__c/Macro_Site__c.object-meta.xml
<CustomObject>
    <description>Used to track information about a Site from its source system.</description>
    <label>Macro Site</label>
    <nameField>
        <label>Macro Site ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Macro Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>