force-app/main/default/objects/Macro_Site__c/fields/A4750_Close_Doc_Comple_Decom_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4750_Close_Doc_Comple_Decom_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4750 Close Doc Comple Decom Finish</label>
    <type>Date</type>
</CustomField>