force-app/main/default/objects/Macro_Site__c/fields/A4817_ZoningPermitCmpltDecomFinish__c.field-meta.xml
<CustomField>
    <fullName>A4817_ZoningPermitCmpltDecomFinish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4817 ZoningPermitCmpltDecomFinish</label>
    <type>Date</type>
</CustomField>