force-app/main/default/objects/Macro_Site__c/fields/A4870_Site_Decon_Complete_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4870_Site_Decon_Complete_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4870 Site Decon Complete Finish</label>
    <type>Date</type>
</CustomField>