force-app/main/default/objects/Macro_Site__c/fields/A4884_EleclUtlyAcctTerm_Decom_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4884_EleclUtlyAcctTerm_Decom_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4884 EleclUtlyAcctTerm Decom Finish</label>
    <type>Date</type>
</CustomField>