force-app/main/default/objects/Macro_Site__c/fields/Active_Decom_POR_AUG_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Decom_POR_AUG_Status__c</fullName>
    <label>Active Decom POR/AUG Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>