force-app/main/default/objects/Macro_Site__c/fields/ADM_Best_Estimate_Timing_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Best_Estimate_Timing_Date__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM Best Estimate Timing Date</label>
    <type>Date</type>
</CustomField>