force-app/main/default/objects/Macro_Site__c/fields/ADM_Final_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ADM_Final_Disposition__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM Final Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>