force-app/main/default/objects/Macro_Site__c/fields/ADM_Final_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Final_Disposition_Date__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM Final Disposition Date</label>
    <type>Date</type>
</CustomField>