force-app/main/default/objects/Macro_Site__c/fields/ADM_NationalRFComments__c.field-meta.xml
<CustomField>
    <fullName>ADM_NationalRFComments__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM NationalRFComments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>