force-app/main/default/objects/Macro_Site__c/fields/ADM_NationalRFResponse__c.field-meta.xml
<CustomField>
    <fullName>ADM_NationalRFResponse__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM NationalRFResponse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>