force-app/main/default/objects/Macro_Site__c/fields/AUG_ID__c.field-meta.xml
<CustomField>
    <fullName>AUG_ID__c</fullName>
    <label>AUG ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>