force-app/main/default/objects/Macro_Site__c/fields/Augment_Type__c.field-meta.xml
<CustomField>
    <fullName>Augment_Type__c</fullName>
    <label>Augment Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>