force-app/main/default/objects/Macro_Site__c/fields/BKL_Vetted_For_Decom_Comments__c.field-meta.xml
<CustomField>
    <fullName>BKL_Vetted_For_Decom_Comments__c</fullName>
    <label>BKL Vetted For Decom Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>