force-app/main/default/objects/Macro_Site__c/fields/BKL_Vetted_For_Decom_SignOffDate__c.field-meta.xml
<CustomField>
    <fullName>BKL_Vetted_For_Decom_SignOffDate__c</fullName>
    <label>BKL Vetted For Decom SignOffDate</label>
    <type>Date</type>
</CustomField>