force-app/main/default/objects/Macro_Site__c/fields/Cabinet_Combination__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Combination__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Cabinet Combination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>