force-app/main/default/objects/Macro_Site__c/fields/Cand_Status__c.field-meta.xml
<CustomField>
    <fullName>Cand_Status__c</fullName>
    <label>Cand Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>