force-app/main/default/objects/Macro_Site__c/fields/Clearwire_Iden_Site__c.field-meta.xml
<CustomField>
    <fullName>Clearwire_Iden_Site__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Clearwire Iden Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>