force-app/main/default/objects/Macro_Site__c/fields/Close_Out_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Complete_Status__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Close Out Complete Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>