force-app/main/default/objects/Macro_Site__c/fields/Closed_Date_MB__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_MB__c</fullName>
    <label>Closed Date (MB)</label>
    <type>Date</type>
</CustomField>