force-app/main/default/objects/Macro_Site__c/fields/Decom_Flag__c.field-meta.xml
<CustomField>
    <fullName>Decom_Flag__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Decom Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>