force-app/main/default/objects/Macro_Site__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Macro Sites</relationshipLabel>
    <relationshipName>Macro_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>