force-app/main/default/objects/Macro_Site__c/fields/Divestiture_Site_Text__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site_Text__c</fullName>
    <formula>Divestiture_Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divestiture Site (Text)</label>
    <type>Text</type>
</CustomField>