force-app/main/default/objects/Macro_Site__c/fields/Earliest_CTED_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_CTED_Term_Date__c</fullName>
    <description>List Project: BVELU: 02/17/2021</description>
    <label>Earliest CTED Term Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>