force-app/main/default/objects/Macro_Site__c/fields/FDS_DecisionatorStatus__c.field-meta.xml
<CustomField>
    <fullName>FDS_DecisionatorStatus__c</fullName>
    <label>FDS DecisionatorStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>