force-app/main/default/objects/Macro_Site__c/fields/FDS_DIS_Coverage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>FDS_DIS_Coverage_Capacity__c</fullName>
    <label>FDS DIS Coverage Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>