force-app/main/default/objects/Macro_Site__c/fields/FDS_Geo_Market__c.field-meta.xml
<CustomField>
    <fullName>FDS_Geo_Market__c</fullName>
    <label>FDS Geo Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>