force-app/main/default/objects/Macro_Site__c/fields/FDS_LEA_Primary_Lease_Current_Term_EndDt__c.field-meta.xml
<CustomField>
    <fullName>FDS_LEA_Primary_Lease_Current_Term_EndDt__c</fullName>
    <label>FDS LEA Primary Lease Current Term EndDt</label>
    <type>Date</type>
</CustomField>