force-app/main/default/objects/Macro_Site__c/fields/FDS_LEA_Primary_Lease_Payee__c.field-meta.xml
<CustomField>
    <fullName>FDS_LEA_Primary_Lease_Payee__c</fullName>
    <label>FDS_LEA Primary Lease Payee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>