force-app/main/default/objects/Macro_Site__c/fields/FDS_PC_Distrib_Amount__c.field-meta.xml
<CustomField>
    <fullName>FDS_PC_Distrib_Amount__c</fullName>
    <label>FDS PC Distrib Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>