force-app/main/default/objects/Macro_Site__c/fields/FDS_PC_Physical_Removal_Cost__c.field-meta.xml
<CustomField>
    <fullName>FDS_PC_Physical_Removal_Cost__c</fullName>
    <label>FDS PC Physical  Removal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>