force-app/main/default/objects/Macro_Site__c/fields/FDS_Physical_Decom_Binding_Flag__c.field-meta.xml
<CustomField>
    <fullName>FDS_Physical_Decom_Binding_Flag__c</fullName>
    <label>FDS Physical Decom Binding Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>