force-app/main/default/objects/Macro_Site__c/fields/FDS_Physical_Decom_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_Physical_Decom_Issue_Date__c</fullName>
    <label>FDS Physical Decom Issue Date</label>
    <type>Date</type>
</CustomField>