force-app/main/default/objects/Macro_Site__c/fields/FDS_RF_Shutdown_Binding_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_RF_Shutdown_Binding_Date__c</fullName>
    <label>FDS RF Shutdown Binding Date</label>
    <type>Date</type>
</CustomField>