force-app/main/default/objects/Macro_Site__c/fields/FDS_Site_Build_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>FDS_Site_Build_Status_Description__c</fullName>
    <label>FDS Site Build Status Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>