force-app/main/default/objects/Macro_Site__c/fields/FDS_Siterra_Current_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>FDS_Siterra_Current_Rent_Amount__c</fullName>
    <label>FDS Siterra Current Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>