force-app/main/default/objects/Macro_Site__c/fields/FDS_Siterra_Payee__c.field-meta.xml
<CustomField>
    <fullName>FDS_Siterra_Payee__c</fullName>
    <label>FDS Siterra Payee</label>
    <length>200</length>
    <type>Text</type>
</CustomField>