force-app/main/default/objects/Macro_Site__c/fields/FDS_Sprint_Transmission_Ended_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_Sprint_Transmission_Ended_Status__c</fullName>
    <label>FDS Sprint Transmission Ended Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>