force-app/main/default/objects/Macro_Site__c/fields/FDS_SV_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_SV_Site_Status__c</fullName>
    <label>FDS SV Site Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>