force-app/main/default/objects/Macro_Site__c/fields/FDS_TMO_Site_Decommissioned_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_TMO_Site_Decommissioned_Date__c</fullName>
    <label>FDS TMO Site Decommissioned Date</label>
    <type>Date</type>
</CustomField>