force-app/main/default/objects/Macro_Site__c/fields/FDS_TMO_Site_Decommissioned_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_TMO_Site_Decommissioned_Status__c</fullName>
    <label>FDS TMO Site Decommissioned Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>