force-app/main/default/objects/Macro_Site__c/fields/Forced_Relocation_Code__c.field-meta.xml
<CustomField>
    <fullName>Forced_Relocation_Code__c</fullName>
    <label>Forced Relocation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>