force-app/main/default/objects/Macro_Site__c/fields/Forced_Removal_Code__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal_Code__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Forced Removal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>