force-app/main/default/objects/Macro_Site__c/fields/Forecasted_Logical_Decomm_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decomm_Status__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Forecasted Logical Decomm Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>