force-app/main/default/objects/Macro_Site__c/fields/Forecasted_Logical_Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decommission_Date__c</fullName>
    <formula>IF(
MONTH( Forecasted_Logical_Decommission_Date_Sor__c ) = 12,
DATE( YEAR( Forecasted_Logical_Decommission_Date_Sor__c ), 12, 31 ),
DATE( YEAR( Forecasted_Logical_Decommission_Date_Sor__c ), MONTH ( Forecasted_Logical_Decommission_Date_Sor__c ) + 1, 1 ) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Logical Decommission Date</label>
    <type>Date</type>
</CustomField>