force-app/main/default/objects/Macro_Site__c/fields/Forecasted_Logical_Decommission_Date_Sor__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decommission_Date_Sor__c</fullName>
    <label>Forecasted Logical Decommission Date Sor</label>
    <type>Date</type>
</CustomField>