force-app/main/default/objects/Macro_Site__c/fields/Freely_Transferable__c.field-meta.xml
<CustomField>
    <fullName>Freely_Transferable__c</fullName>
    <label>Freely Transferable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>