force-app/main/default/objects/Macro_Site__c/fields/Harvest_Site__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Site__c</fullName>
    <formula>Divestiture_Site__r.Harvest_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harvest Site</label>
    <type>Checkbox</type>
</CustomField>