force-app/main/default/objects/Macro_Site__c/fields/Landlord_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Normalized__c</fullName>
    <label>Landlord (Normalized)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>