force-app/main/default/objects/Macro_Site__c/fields/Lease_Only_Site__c.field-meta.xml
<CustomField>
    <fullName>Lease_Only_Site__c</fullName>
    <formula>Divestiture_Site__r.Lease_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Only Site</label>
    <type>Checkbox</type>
</CustomField>