force-app/main/default/objects/Macro_Site__c/fields/Legacy_Network__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Network__c</fullName>
    <inlineHelpText>Sprint or T-Mobile</inlineHelpText>
    <label>Legacy Network</label>
    <length>100</length>
    <type>Text</type>
</CustomField>