force-app/main/default/objects/Macro_Site__c/fields/Macro_Flag__c.field-meta.xml
<CustomField>
    <fullName>Macro_Flag__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>Macro Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>