force-app/main/default/objects/Macro_Site__c/fields/MLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>MLA_Flag__c</fullName>
    <label>MLA Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>