force-app/main/default/objects/Macro_Site__c/fields/MLA_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>MLA_Site_ID__c</fullName>
    <label>MLA Site ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>