force-app/main/default/objects/Macro_Site__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <description>List Project: BVELU: 02/17/2021</description>
    <label>Notes Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>