force-app/main/default/objects/Macro_Site__c/fields/On_Sprint_Intracompany_List__c.field-meta.xml
<CustomField>
    <fullName>On_Sprint_Intracompany_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Site is On Sprint Owned List or Inter Company List</description>
    <inlineHelpText>This Site is On Sprint Owned List or Inter Company List</inlineHelpText>
    <label>On Sprint / Intracompany List</label>
    <type>Checkbox</type>
</CustomField>