force-app/main/default/objects/Macro_Site__c/fields/Physical_Decom_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Physical_Decom_Date_Source_System__c</fullName>
    <label>Physical Decom Date (Source System)</label>
    <type>Date</type>
</CustomField>