force-app/main/default/objects/Macro_Site__c/fields/Post_7_1_20_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_7_1_20_List_Notes__c</fullName>
    <label>Post 7/1/20 List Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>