force-app/main/default/objects/Macro_Site__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <label>Program ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>