force-app/main/default/objects/Macro_Site__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>