force-app/main/default/objects/Macro_Site__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Property Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>