force-app/main/default/objects/Macro_Site__c/fields/Regional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Regional_Comments__c</fullName>
    <description>to append comment history field values from Site Forecast object</description>
    <label>Regional Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>