force-app/main/default/objects/Macro_Site__c/fields/Remove_Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Remove_Equipment_Status__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Remove Equipment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>