force-app/main/default/objects/Macro_Site__c/fields/RF_Forecast_list__c.field-meta.xml
<CustomField>
    <fullName>RF_Forecast_list__c</fullName>
    <label>RF Forecast list</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>