force-app/main/default/objects/Macro_Site__c/fields/RF_List_Comments__c.field-meta.xml
<CustomField>
    <fullName>RF_List_Comments__c</fullName>
    <description>Comments carried over from RF List Site forecast</description>
    <inlineHelpText>Comments carried over from RF List Site forecast</inlineHelpText>
    <label>RF_List_Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>