force-app/main/default/objects/Macro_Site__c/fields/RF_List_Override__c.field-meta.xml
<CustomField>
    <fullName>RF_List_Override__c</fullName>
    <formula>IF(  ISBLANK(Divestiture_Site__c), &apos;N/A&apos;, 
			  IF(ISBLANK(TEXT(Divestiture_Site__r.RF_List_Override__c)),&apos;N/A&apos;,TEXT(Divestiture_Site__r.RF_List_Override__c)))</formula>
    <label>RF List Override</label>
    <type>Text</type>
</CustomField>