force-app/main/default/objects/Macro_Site__c/fields/RF_List_Reason_for_Override__c.field-meta.xml
<CustomField>
    <fullName>RF_List_Reason_for_Override__c</fullName>
    <formula>Divestiture_Site__r.RF_List_Reason_for_Override__c</formula>
    <label>RF List Reason for Override</label>
    <type>Text</type>
</CustomField>