force-app/main/default/objects/Macro_Site__c/fields/RF_Shutdown_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_Complete__c</fullName>
    <label>RF Shutdown Date (Complete)</label>
    <type>Date</type>
</CustomField>