force-app/main/default/objects/Macro_Site__c/fields/RF_Shutdown_Date_is_Locked_F__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_is_Locked_F__c</fullName>
    <formula>Divestiture_Site__r.RF_Shutdown_Date_is_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RF Shutdown Date is Locked</label>
    <type>Checkbox</type>
</CustomField>