force-app/main/default/objects/Macro_Site__c/fields/Sensitive_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Landlord__c</fullName>
    <inlineHelpText>Filled from the Decisionator field LEA_Sensitive_Landlord updates White Glove designation.</inlineHelpText>
    <label>Sensitive Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>