force-app/main/default/objects/Macro_Site__c/fields/Site_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Type__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Site Access Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>