force-app/main/default/objects/Macro_Site__c/fields/Site_Decommisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommisioned_Date__c</fullName>
    <inlineHelpText>List Project: BVELU: 02/08/2021</inlineHelpText>
    <label>Site Decommisioned Date</label>
    <type>Date</type>
</CustomField>