force-app/main/default/objects/Macro_Site__c/fields/Site_FNL_BCK_MID_FRNT_HAUL_TYP__c.field-meta.xml
<CustomField>
    <fullName>Site_FNL_BCK_MID_FRNT_HAUL_TYP__c</fullName>
    <label>Site FNL BCK MID FRNT HAUL TYP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>