force-app/main/default/objects/Macro_Site__c/fields/T_A_4750_Closeout_Doc_Start__c.field-meta.xml
<CustomField>
    <fullName>T_A_4750_Closeout_Doc_Start__c</fullName>
    <label>T: (A 4750) Closeout Doc Start</label>
    <type>Date</type>
</CustomField>