force-app/main/default/objects/Macro_Site__c/fields/TA4815_LeasTrmModNotice2LLDecom__c.field-meta.xml
<CustomField>
    <fullName>TA4815_LeasTrmModNotice2LLDecom__c</fullName>
    <label>T:(A 4815) LeaseTrm/Mod Notice 2 LL Dcom</label>
    <type>Date</type>
</CustomField>